# mchs-sms

./: .flake8  README.md  index.html  pyproject.toml
mchs_sms/: db.py  example.py  phones.txt  server.py  smsc_api.py
mchs_sms/templates/: index.html
tests/: test_redis.py  test_request_smsc.py  test_send_message.py
