[tool.poetry]
name = "mchs-sms"
version = "0.1.0"
description = ""
authors = ["Sergei Klimov <s.klimov@bk.ru>"]
readme = "README.md"
packages = [{include = "mchs_sms"}]

[tool.poetry.dependencies]
python = "^3.10"
trio = "^0.22.2"
asks = "^3.0.0"
asyncclick = "^8.1.3.4"

[tool.poetry.group.dev.dependencies]
pytest-trio = "^0.8.0"
pytest-asyncio = "^0.21.1"
flake9 = "^3.8.3.post2"
black = "^23.7.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -s -vvv"
testpaths = [
    "tests",
    "integration",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
